DTR-1496: Update welsh messages

--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -24,7 +24,7 @@
     govukDateInput: GovukDateInput,
     govukButton: GovukButton,
     govukDetails: GovukDetails,
-    paragraph: Paragraph,
+    paragraph: Paragraph
 )
 
 @(form: Form[_], mode: Mode, dateTimeNumeric: String, source: DirectDebitSource, call: Call)(implicit request: Request[_], messages: Messages)
