DTR-2140: Update welsh messages

--- a/app/views/CheckYourAnswersView.scala.html
+++ b/app/views/CheckYourAnswersView.scala.html
@@ -57,7 +57,7 @@
         }
 
         @govukButton(
-            ButtonViewModel(messages("checkYourAnswers.acceptAndContinue"))
+            ButtonViewModel(messages("checkYourAnswers.acceptAndSubmit"))
         )
     }
 }
