DTR-2283 added h3 to summary card heading

--- a/app/views/PaymentPlanCancelledView.scala.html
+++ b/app/views/PaymentPlanCancelledView.scala.html
@@ -43,7 +43,8 @@
     @govukSummaryList(SummaryList(
         card = Some(Card(
             title = Some(CardTitle(
-                content = messages("paymentPlanCancelled.paymentReference", paymentReference)
+                content = messages("paymentPlanCancelled.paymentReference", paymentReference),
+                headingLevel = Some(3)
             ))
         )),
         rows = rows
