--- a/app/views/YourBankDetailsView.scala.html
+++ b/app/views/YourBankDetailsView.scala.html
@@ -43,7 +43,7 @@
             )
             .withWidth(Full)
             .withAttribute("spellcheck" -> "false")
-            .withAttribute("autocomplete" -> "accountHolderName")
+            .withAttribute("autocomplete" -> "name")
         )
 
         @govukInput(
