DTR-2288 updated error messages

--- a/app/views/PaymentDateView.scala.html
+++ b/app/views/PaymentDateView.scala.html
@@ -30,13 +30,38 @@
 
 @layout(pageTitle = title(form, messages("paymentDate.title")), backLink = Some(call.url)) {
 
-    @formHelper(action = routes.PaymentDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @defining({
+        val baseKey = "value"
+        val hasBaseError = form.errors.exists(_.key == baseKey)
+        val firstPartErrorOpt = form.errors.find(e => e.key.startsWith(baseKey + "."))
+        val extraBaseError =
+    if (!hasBaseError) {
+        firstPartErrorOpt.map(e => FormError(baseKey, e.message, e.args)).toSeq
+    } else {
+        Seq. empty
+    }
 
-        @mainErrorSummary(form, errorLinkOverrides = Map("value" -> "value.day"))
+        form.copy(errors = (form.errors ++ extraBaseError).distinct)
+    }) { adjustedForm =>
+
+        @formHelper(action = routes.PaymentDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+
+    @defining({
+            val baseKey = "value"
+            val firstPart =
+                Seq("day", "month", "year")
+                    .find(p => adjustedForm.errors.exists(_.key == s"$baseKey.$p"))
+                    .map(p => s"$baseKey.$p")
+                    .getOrElse(s"$baseKey.day")
+
+        Map(baseKey -> firstPart)
+}) { linkOverrides =>
+
+        @mainErrorSummary(adjustedForm, errorLinkOverrides = linkOverrides)
 
         @govukDateInput(
             DateViewModel(
-                field  = form("value"),
+                field  = adjustedForm("value"),
                 legend = LegendViewModel(messages("paymentDate.heading")).asPageHeading()
             ).withHint(HintViewModel(HtmlContent(Seq
                 (
@@ -53,4 +78,6 @@
             ButtonViewModel(messages("site.continue"))
         )
     }
+    }
+}
 }
