update hidden text messages

--- a/app/views/components/DirectDebitTable.scala.html
+++ b/app/views/components/DirectDebitTable.scala.html
@@ -16,9 +16,9 @@
 
 @import models.DirectDebitDetails
 @import utils.MaskAndFormatUtils.*
-@import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.govukfrontend.views.viewmodels.table._
-@import uk.gov.hmrc.govukfrontend.views.viewmodels.content._
+@import uk.gov.hmrc.govukfrontend.views.html.components.*
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.table.*
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.content.*
 
 @this(govukTable: GovukTable, linkWithHiddenText: LinkWithHiddenText)
 
