--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -45,9 +45,9 @@
         }
 
         @if(isSuspensionActive && isPlanChangeable) {
-            <p class="govuk-inset-text">
+            <div class="govuk-inset-text">
                 @messages("paymentPlanDetails.inset.text", suspensionStartDate, suspensionEndDate)
-            </p>
+            </div>
         }
     }
 
@@ -73,32 +73,30 @@
         }
     }
 
-
     @govukSummaryList(SummaryList(
         card = Some(Card(
             title = Some(CardTitle(
-            content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
-        )),
-        actions =
-                Some(Actions(
-                    items = Seq(
-                        if (showAmendLink) ActionItem(
-                            href = routes.AmendingPaymentPlanController.onPageLoad().url,
-                            content = messages("paymentPlanDetails.details.amend"),
-                            visuallyHiddenText = Some(messages("paymentPlanDetails.details.amend.hidden"))
-                        ) else null,
-                        if (showCancelLink) ActionItem(
-                            href = routes.CancelPaymentPlanController.onPageLoad().url,
-                            content = messages("paymentPlanDetails.details.cancel"),
-                            visuallyHiddenText = Some(messages("paymentPlanDetails.details.cancel.hidden"))
-                        ) else null,
-                        if (showSuspendLink) ActionItem(
-                            href = routes.SuspendPaymentPlanController.onPageLoad().url,
-                            content = messages("paymentPlanDetails.details.suspend"),
-                            visuallyHiddenText = Some(messages("paymentPlanDetails.details.suspend.hidden"))
-                        ) else null
-                    ).filter(_ != null) // remove the nulls
-                ))
+                content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
+            )),
+            actions = Some(Actions(
+                items = Seq(
+                    if (showAmendLink) ActionItem(
+                        href = routes.AmendingPaymentPlanController.onPageLoad().url,
+                        content = messages("paymentPlanDetails.details.amend"),
+                        visuallyHiddenText = Some(messages("paymentPlanDetails.details.amend.hidden"))
+                    ) else null,
+                    if (showCancelLink) ActionItem(
+                        href = routes.CancelPaymentPlanController.onPageLoad().url,
+                        content = messages("paymentPlanDetails.details.cancel"),
+                        visuallyHiddenText = Some(messages("paymentPlanDetails.details.cancel.hidden"))
+                    ) else null,
+                    if (showSuspendLink) ActionItem(
+                        href = routes.SuspendPaymentPlanController.onPageLoad().url,
+                        content = messages("paymentPlanDetails.details.suspend"),
+                        visuallyHiddenText = Some(messages("paymentPlanDetails.details.suspend.hidden"))
+                    ) else null
+                ).filter(_ != null) // remove the nulls
+            ))
         )),
         rows = rows
     ))
