--- a/app/views/components/DirectDebitTable.scala.html
+++ b/app/views/components/DirectDebitTable.scala.html
@@ -16,9 +16,9 @@
 
 @import models.DirectDebitDetails
 @import utils.MaskAndFormatUtils.*
-@import uk.gov.hmrc.govukfrontend.views.html.components._
-@import uk.gov.hmrc.govukfrontend.views.viewmodels.table._
-@import uk.gov.hmrc.govukfrontend.views.viewmodels.content._
+@import uk.gov.hmrc.govukfrontend.views.html.components.*
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.table.*
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.content.*
 
 @this(govukTable: GovukTable, linkWithHiddenText: LinkWithHiddenText)
 
@@ -48,7 +48,15 @@
             )
           )
         ),
-        TableRow(content = Text(maskAccountNumber(dd.accountNumber))),
+        TableRow(
+            content = HtmlContent(
+            s"""${maskAccountNumber(dd.accountNumber)}
+                <span class="govuk-visually-hidden">
+                    ${messages("yourDirectDebitInstructions.account.number.hidden", {(dd.accountNumber).substring(4)})}
+                </span>
+            """
+            )
+        ),
         TableRow(content = Text(dd.setupDate)),
         TableRow(content = Text(dd.paymentPlans))
       )
