Update PP1 and Advance notice messages

--- a/app/views/AdvanceNoticeView.scala.html
+++ b/app/views/AdvanceNoticeView.scala.html
@@ -114,7 +114,7 @@
 
     @paragraphWithLink(
         linkMessage = messages("advanceNotice.returnLink"),
-        linkUrl = routes.PaymentPlanDetailsController.onPageLoad().url,
+        linkUrl = routes.PaymentPlanDetailsController.onPageLoad().url
     )
 
 }
