--- a/app/views/BackSubmissionView.scala.html
+++ b/app/views/BackSubmissionView.scala.html
@@ -31,5 +31,5 @@
 
     @header1("backSubmission.heading")
     @paragraph(messages("backSubmission.p1"))
-    @link("paymentPlanCancelled.link", call.url)
+    @link("paymentPlanCancelled.link", call.url, linkFullStop = true)
 }
